<resources>
    <string name="app_name">OurWallet</string>

    <string name="main_title">My Lists</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_shop_list">Edit Shop List</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_shop_list">Shop List</string>

    <string name="main_help_date_owner">Date &amp; Owner</string>
    <string name="main_help_amount">Amount</string>
    <string name="main_help_users">Users</string>
    <string name="main_help_ispaid">Paid</string>

    <!-- dialog string -->
    <string name="dialog_qty">Quantity</string>
    <string name="dialog_user_qty">People Number</string>
    <string name="dialog_set_date">Set Date</string>
    <string name="dialog_date">Date</string>
    <string name="add_user">Add User</string>
    <string name="edit_user">Edit User</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="void_user">User must have valid name</string>
    <string name="void_item">Item must have valid name and price</string>
    <string name="void_price">Item must have price</string>
    <string name="void_amount">Shop list must have valid amount</string>
    <string name="void_shop_list">Shop list must have owner and amount</string>

    <string name="item_name">Items</string>
    <string name="common">ALL</string>
    <string name="personal">User Total</string>
    <string name="euro">€</string>
    <string name="each">each</string>
    <string name="date">Date</string>
    <string name="owner">Owner</string>

    <string name="confirm">Set</string>
    <string name="cancel">Back</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_add_user">Add User</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_edit">Edit</string>

    <string name="date_pattern">yyyy/MM/dd HH:mm</string>
    <string name="cab_title">Select Items</string>
    <string name="cab_subtitle">items selected</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="paid">Paid</string>
    <string name="shoplist_save_done">Shoplist saved correctly</string>
    <string name="position_save_error">Error occurred during saving</string>
    <string name="loading">Loading&#8230;</string>
    <string name="action_scan_w_camera">Acquire from receipt</string>
    <string name="title_activity_highliter">HighliterActivity</string>
    <string name="action_add_region">Add Region</string>
    <string name="action_sel_price">Select Price</string>
    <string name="action_done">Confirm</string>
    <string name="title_activity_ocr">OCRActivity</string>
    <string name="ocr_processing_done">OCR processing completed</string>
    <string name="ocr_processing_error">Error occurs in OCR processing</string>
    <string name="action_import">Import</string>
    <string name="action_sel_name">Select Name</string>
    <string name="ocr_processing_loading">Waiting OCR recognition&#8230;</string>
    <string name="action_pan_mode">Pan Mode</string>
    <string name="action_start_ocr">OCR</string>
    <string name="text_detection_processing_loading">Text detection&#8230;</string>
    <string name="text_app_initialization">Initialization&#8230;</string>
    <string name="action_detect_text">Detect Text</string>
    <string name="finger_selection_hint">Use your finger to select items</string>
    <string name="ok">OK</string>
    <string name="ocr_activity_bad_input_dialog_til">ERROR</string>
    <string name="ocr_activity_bad_input_dialog_msg">Cannot start OCR!</string>
</resources>
