<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.abapp.mobile.shoppingtogether.EditShopList"
    >

    <item android:id="@+id/action_add_item"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add_item"
        app:showAsAction="always"  />
    <item android:id="@+id/action_add_user"
        android:icon="@drawable/ic_action_add_person"
        android:title="@string/action_add_user"
        app:showAsAction="ifRoom"  />
    <item android:id="@+id/action_take_photo"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/action_scan_w_camera"
        app:showAsAction="ifRoom"  />
    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"  />

</menu>
