<?xml version="1.0" encoding="utf-8"?>

<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin_medium"
    android:fillViewport="true"
    >

    <TableLayout
        android:id="@+id/edit_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        >

        <TableRow
            android:id="@+id/edit_table_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="@dimen/table_item_col_width"
                android:layout_column="0"
                android:gravity="left|bottom"
                android:text="@string/item_name"
                android:textSize="@dimen/medium"/>
<!--
            <include layout="@layout/table_user_name"
                android:layout_height="wrap_content"
                android:layout_width="@dimen/table_user_col_size"
                android:layout_weight="0.25"/>
            <include layout="@layout/table_user_name"
                android:layout_width="@dimen/table_user_col_size"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"/>
            <include layout="@layout/table_user_name"
                android:layout_width="@dimen/table_user_col_size"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"/>
-->
            <TextView
                android:id="@+id/common"
                android:layout_height="wrap_content"
                android:layout_width="@dimen/table_user_col_size"
                android:layout_weight="0.25"
                android:gravity="center|bottom"
                android:textSize="@dimen/medium"
                android:text="@string/common"/>

        </TableRow>

        <ScrollView
            android:id="@+id/horizontal_scroll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TableLayout
                android:id="@+id/edit_table_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                >


<!--
                    <include layout="@layout/shop_list_item_entry_row"
                    />
-->
            </TableLayout>


        </ScrollView>

        <TableRow
            android:id="@+id/edit_table_footer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            >

            <TextView
                android:id="@+id/personal"
                android:layout_height="wrap_content"
                android:layout_width="@dimen/table_item_col_width"
                android:layout_column="0"
                android:gravity="left"
                android:textSize="@dimen/small"
                android:text="@string/personal"/>
<!--
            <include layout="@layout/table_footer_textview"/>
-->
        </TableRow>

    </TableLayout>

</HorizontalScrollView>